@@ -1,5 +1,12 @@
 2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03542] news support
+	* file.c (loadGeneralFile): NNTP as well as NEWS
+	* indep.c (url_unquote_char): check % hex hex
+		(url_unquote): unquote except \0, \n, \r
+
+2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03541] Re: W3M_LINE_NO / W3M_CURRENT_COLUMN
 	* main.c (goLine): check searchKeyData()
 		(set_buffer_environ): W3M_CURRENT_*
@@ -5589,4 +5596,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.600 2002/12/09 15:21:12 ukai Exp $
+$Id: ChangeLog,v 1.601 2002/12/09 15:24:00 ukai Exp $
